client/master.css
* {
	box-sizing: border-box;
}

body {
	font: 1em/1.5 "Helvetica Neue", sans-serif;
	color: #333;
	-webkit-font-smoothing: antialiased;
	margin: 0;
	padding: 8px;
}

h1 {
	font-weight: 300;
	margin: 0 0 0.5em;
	font-size: 2em;
}

h2 {
	font-size: 1.1em;
	margin: 0 0 .5em;
}

mark {
	color: #333;
	background: none;
}

.muted {
	color: #aaa;
}

.map {
	float: left;
	box-shadow: inset rgba(0,0,0, 0.4) 0 0 1px;
	overflow: scroll;
	-webkit-overflow-scrolling: touch;
}

.map .content {
	width: 732px;
	height: 700px;
	background: transparent url("/map.png") no-repeat;
	position: relative;
}

.map, .content, .map svg {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
}

.details {
	float: left;
	padding: 1%;
	width: 40%;
	text-align: center;
}

.panel-toggle {
	position: absolute;
	left: 8px;
	top: 0;
	font-size: 3em;
	line-height: 1;
	visibility: hidden;
	color: #1A7DB4;
	text-shadow: rgba(6, 166, 255, 0.14) 0 0 3px;
	cursor: pointer;
}

.visitors {
	font-size: 1.2em;
}

.party-details {
	text-align: left;
	width: 50%;
	margin: 2em auto;
}

.party-details th {
	font-weight: bold;
	border-right: 1px solid #ddd;
}

.party-details td,
.party-details th {
	padding: 5px 10px;
}

.party-details tr:first-child * {
	border-bottom: 1px solid #ddd;
}

.map svg {
	width: 100%;
	height: 100%;
}

.map circle {
	fill: red;
	cursor: pointer;
}

.map text {
    text-anchor: middle;
    fill: white;
    font-weight: bold;
    cursor: pointer;
}

.map circle.callout {
    stroke-width: 5px;
    stroke-dasharray: 9, 5;
    stroke-opacity: .8;
    fill: none;
    stroke: red;
}

/*
	Create popup
 */

.popup-container {
	z-index: 201;
	position: absolute;
	width: 200px;
	left: -999em;
	-webkit-transform: scale(0);
	-webkit-transform-origin: center bottom;
	-webkit-transition: -webkit-transform .15s ease-out;
 }

 .popup-container.show {
 	-webkit-transform: scale(1);
 }

.create-popup {
	background-color: #fff;
	padding: 10px;
	border-radius: 3px;
	box-shadow: rgba(0, 0, 0, 0.4) 0 10px 20px;
}

label {
	font-weight: bold;
	font-size: .9em;
}

.create-popup label {
	display: block;
}

.create-popup footer .close {
	display: none;
}

.create-popup footer {
	margin-top: .5em;
	overflow: hidden;
}

.create-popup footer {
	font-size: .6em;
}

.create-popup .save {
	float: right;
	background-color: #129DC7;
}

.create-popup header .close {
	display: inline-block;
	font-weight: bold;
	font-size: 1.3em;
	cursor: pointer;
	position: absolute;
	right: 10px;
	top: 0;
}

.create-popup input[type="text"],
.create-popup textarea {
	width: 100%;
}

/* The arrow  */

.create-popup:after {
	display: block;
	position: absolute;
	bottom: -15px;
	left: 40%;
	content: "";
	height: 0;
	width: 0;
	border-left: 15px solid transparent;
	border-right: 15px solid transparent;
	border-top: 15px solid #fff;
}

/* Attendees */

.attendees {
	border: solid #eee;
	border-width: 1px 0;
	margin: 1em 0;
	padding: 1em 0;
	text-align: center;
}

.attendees .attendees-count {
	font-weight: 300;
	font-size: 1.5em;
	color: #777;
	display: block;
}

#rsvp-yes {
	margin: 1em 0;
}

/* Helpers */

.msg {
	font-size: .8em;
}

.negative {
	color: #C91818;
}

/* Forms */

.btn,
button,
input[type="button"],
input[type="submit"] {
	-webkit-appearance: none;
	-webkit-font-smoothing: antialiased;
	-webkit-tap-highlight-color: transparent;
	display: inline-block;
	position: relative;
	
	background-color: #77B828;
	color: #fff;
	font-weight: bold;
	text-align: center;
	font-family: "Helvetica Neue", sans-serif;
	font-size: 1.5em;

	padding: .5em 1.5em;
	border-radius: 3px;
	cursor: pointer;
	border: 0;
}

.btn:active,
button:active,
input[type="button"]:active,
input[type="submit"]:active {
	top: 3px;
	box-shadow: #629623 0 2px 0;
}

@media only screen and (max-width: 800px) {

	.panel-toggle {
		visibility: visible;
	}

	html, body {
		height: 100%;
		overflow: hidden;
	}

	.map {
		height: 100%;
	}

	.map .content {
		position: static;
	}

	.map,
	.details {
		float: none;
		width: 100%;
	}

	.details {
		-webkit-transform: translate(0, 80%);
		-webkit-transition: -webkit-transform .3s ease-out;
		background-color: #fff;
		position: absolute;
		z-index: 101;
		top: 5vh;
		left: 0;
		bottom: 0;
		box-shadow: rgba(0,0,0, 0.3) 0 -1px 5px;
	}

	.details.show {
		-webkit-transform: translate(0, 0);
	}

	/* Override centered position for popup */
	.popup-container {
		bottom: auto !important;
		left: 4vw !important;
		right: 4vw !important;
		top: 4vw !important;
		width: auto;
		-webkit-transform-origin: center center;
	}

	.create-popup::after {
		display: none;
	}

	.create-popup .save {
		float: none;
		width: 100%;
	}

	.create-popup footer .close {
		display: block;
		background-color: #999;
	}
}

